[gd_scene load_steps=8 format=3 uid="uid://3ux5lcf5kbhs"]

[ext_resource type="PackedScene" uid="uid://b3e2ulqrvcf1q" path="res://PlayerAndTank/tank.tscn" id="1_4q17n"]
[ext_resource type="PackedScene" uid="uid://c80x2lpbryx6j" path="res://PlayerAndTank/player.tscn" id="2_30v2w"]
[ext_resource type="Script" path="res://PlayerAndTank/PlayerCamera.gd" id="3_37i13"]
[ext_resource type="Texture2D" uid="uid://d4l1bdi4yr28j" path="res://Sprites/upgrade_circle.png" id="3_l82kq"]
[ext_resource type="PackedScene" uid="uid://irvh438hrwvk" path="res://Upgrades/upgrade_ui.tscn" id="4_dlss7"]
[ext_resource type="Script" path="res://PlayerAndTank/upgrade_circle.gd" id="4_icpbb"]

[sub_resource type="LabelSettings" id="LabelSettings_22eac"]
font_size = 20

[node name="Player_and_Tank" type="Node2D"]

[node name="Tank" parent="." groups=["PlayerAndTank"] instance=ExtResource("1_4q17n")]
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Tank"]
zoom = Vector2(0.1, 0.1)
position_smoothing_enabled = true
script = ExtResource("3_37i13")
metadata/_edit_lock_ = true

[node name="UpgradeCircle" type="Sprite2D" parent="Tank"]
position = Vector2(-248.839, -162.94)
scale = Vector2(0.6, 0.591)
texture = ExtResource("3_l82kq")
script = ExtResource("4_icpbb")

[node name="UpgradeLabel" type="Label" parent="Tank"]
offset_left = -351.706
offset_top = -230.43
offset_right = -140.706
offset_bottom = -194.43
text = "UPGRADES"
label_settings = SubResource("LabelSettings_22eac")
horizontal_alignment = 1

[node name="Upgrade UI" parent="Tank" instance=ExtResource("4_dlss7")]
visible = false
offset_left = -619.159
offset_top = -293.1
offset_right = -39.1586
offset_bottom = 256.9
scale = Vector2(0.5, 0.5)

[node name="UpgradeMarker" type="Marker2D" parent="Tank/Upgrade UI"]
position = Vector2(609.363, 399.156)

[node name="Player" parent="." instance=ExtResource("2_30v2w")]
process_mode = 4
position = Vector2(-36, -453)

[connection signal="toPlayerControl" from="Tank" to="Tank/Camera2D" method="_on_tank_to_player_control"]
[connection signal="toUpgradeScreen" from="Tank/Upgrade UI" to="Tank/Camera2D" method="_on_upgrade_ui_to_upgrade_screen"]
[connection signal="visibility_changed" from="Tank/Upgrade UI" to="Tank/Upgrade UI" method="_on_visibility_changed"]
[connection signal="toTankControl" from="Player" to="Tank/Camera2D" method="_on_player_to_tank_control"]

[editable path="Tank"]
[editable path="Player"]
